# PyXPlane

./: .gitignore  CMakeLists.txt  README  TODOs  cmake_build_command.py  external_tools_build_command.py  install_instructions  plugins_build_command.py  pyxplane.iss  setup.py
plugins/: script_loader.cpp
scripts/: http_service.py
src/: common.hpp  dataaccess_docstrings.hpp  dataaccess_wrapper.cpp  dataaccess_wrapper.hpp  docstrings.hpp  hello_world.cpp.disable  module.cpp  plugin_docstrings.hpp  plugin_wrapper.cpp  plugin_wrapper.hpp  processing_wrapper.hpp  wrapper.cpp  wrapper.hpp
test/: delme_test.py  import_c_extension_test.py
test/xplane/: apt_dat_file_test.py
test/xplane/api/: register_data_accessor_test.py
tools/: script_loader.cpp
xplane/: .gitignore  apt_dat_file.py
